# Projet_Juillet_CN

./: .gitignore  README.md
Partage/: README.txt  docker-compose.yml
WYM_project/: Dockerfile  pyproject.toml
WYM_project/DBB/: cmd.txt  connection.py  create DBB.py
WYM_project/app/: app_test1.py  application.py
WYM_project/app/BDD/: cmd.txt  connection.py  create DBB.py  creation.py
WYM_project/app/model/: requestscript.py
WYM_project/app/modules/: ingredients.py
WYM_project/app/static/css/: main.css
WYM_project/app/templates/: NLP.html  about.html  contact.html  contacted.html  data.html  home.html  index.html  template.html  text.html
WYM_project/model/: requestscript.py
WYM_project/tests/: test_wym_project.py
monitor/: Dockerfile  pyproject.toml  requirements.txt
monitor/monitor/: monitoring.py
stack/: docker-compose.yml
