[tool.poetry]
name = "app"
version = "1.0"
description = ""
authors = ["Renaud Crosset", "Guillaume Rivollier", "Louis Fourel", "Soros Hattarach"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
siteweb = "app.application:main"

packages = [
    { include = "app", from = "." }
]

